--- a/verification.html
+++ b/verification.html
@@ -39,8 +39,8 @@
                                 <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(4)" type="text" id="input4" maxlength="1" style="border: 2px solid rgb(160,155,241) ;"/> 
                             </div>
                             <a class="btn btn-primary btn-block border rounded-pill" role="button" href="addEmployees.html" style="background: rgb(25,28,147);">Verify</a>
-                        <div>
-                            <p class="text-left" style="font-size: 13px;">Didn't receive verification code ?&nbsp;<a class="text-left forgot" style="text-align: left;" href="#">send again</a></p>
+                        <div style="margin: 10px; text-align: center;">
+                            <p style="font-size: 13px; opacity: 100%;">Didn't receive verification code ?&nbsp;<a class="text-left forgot" style="text-align: left;" href="#">SEND AGAIN</a></p>
                         </div>
                     </form>
                 </div>
