--- a/login.html
+++ b/login.html
@@ -34,8 +34,8 @@
                         <div class="form-group text-left"><label class="text-left" for="name" style="text-align: left;">Organisation Name</label><input class="form-control item" type="text" id="name" style="border: 2px solid rgb(160,155,241) ;"></div>
                         <div class="form-group text-left"><label for="email">Email</label><input class="form-control item" type="email" id="email" style="border: 2px solid rgb(160,155,241) ;"></div>
                         <div class="form-group text-left"><label for="email">Password</label><input class="form-control" type="password" style="border: 2px solid rgb(160,155,241) ;"></div><button class="btn btn-primary btn-block border rounded-pill" type="submit" style="background: rgb(25,28,147);">Login</button>
-                        <div>
-                            <p class="text-left" style="font-size: 13px;">Don't have an account?&nbsp;<a class="text-left forgot" style="text-align: left;" href="registration.html">register</a></p>
+                        <div style="margin: 10px; text-align: center;">
+                            <p style="font-size: 13px; opacity: 100%;">Don't have an account?&nbsp;<a class="text-left forgot" style="text-align: left;" href="registration.html">REGISTER</a></p>
                         </div>
                     </form>
                 </div>
