--- a/registration.html
+++ b/registration.html
@@ -38,8 +38,8 @@
                     <div class="form-group"><label for="name">Owner Name</label><input class="form-control item" type="text" id="name" style="border: 2px solid rgb(160,155,241) ;"></div>
                     <div class="form-group"><label for="email">Owner Email</label><input class="form-control item" type="email" id="email" style="border: 2px solid rgb(160,155,241) ;"></div>
                     <a class="btn btn-primary btn-block border rounded-pill" role="button" href="verification.html" style="background: rgb(25,28,147);">Register</a>
-                    <div>
-                        <p style="font-size: 13px;">Already have an account?&nbsp;<a class="text-left forgot" style="text-align: left;" href="login.html">login</a></p>
+                    <div style="margin: 10px; text-align: center;">
+                        <p style="font-size: 13px;">Already have an account?&nbsp;<a class="text-left forgot" style="text-align: left;" href="login.html">LOGIN</a></p>
                     </div>
                 </form>
             </div>
