--- a/home.html
+++ b/home.html
@@ -23,8 +23,10 @@
 				<div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(243,246,249);">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item"><a class="nav-link" href="#" style="color: rgb(239,239,239);">Employees</a></li>
+						<li class="nav-item"><a class="nav-link" href="orgProfile.html"
+								style="color: rgb(247,245,245);">Organisation Profile</a></li>
 						<li class="nav-item"><a class="nav-link" href="userProfile.html"
-								style="color: rgb(247,245,245);">Profile</a></li>
+									style="color: rgb(247,245,245);">Profile</a></li>
 						<li class="nav-item"><a class="nav-link" href="index.html" style="color: rgb(239,239,239);">Logout</a></li>
 					</ul>
 				</div>
@@ -37,8 +39,7 @@
 			<section class="panel">
 				<header class="panel-heading">
 					<span class="pull-right">
-						<a href="project.html" class="btn btn-primary border rounded-pill" style="background: rgb(26, 204, 141);">
-							Create New Project</a>
+						<a class="btn btn-success btn-md rounded-pill" data-toggle="modal" data-target="#feedback" role="button" href="#feedback" style="background: rgb(26, 204, 141);">Create Project</a>
 					</span>
 				</header>
 				<br />
@@ -140,6 +141,29 @@
 			</section>
 
 	</main>
+	<div class="modal fade" id="feedback" tabindex="-1" role="dialog" aria-labelledby="feedack_CenterTitle" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="setup_feedback">Create New Project</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<div style="margin: 10px;">
+					<input type="text" class="form-control" id="orgName" placeholder="Project Name" value="">
+				</div>
+				<div style="margin: 10px;">
+					<textarea type="text" class="form-control" id="orgDes" placeholder="Project Description" value=""></textarea>
+				</div>
+			</div>
+			<div class="modal-footer">
+				<a href="iem.html"><button type="button" class="btn btn-primary rounded-pill"  style="background: rgb(25,28,147);">Create Project</button></a>
+			</div>
+			</div>
+		</div>
+		</div>
 
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
