--- a/project.html
+++ b/project.html
@@ -78,7 +78,7 @@
 					</div>
 					<div class="card-body tab-content">
 						<div class="tab-pane active" id="project">
-							<h6>CREATE NEW PROJECT</h6>
+							<h6>PROJECT INFORMATION</h6>
 							<hr>
 							<form>
 								<div class="form-group">
@@ -97,7 +97,7 @@
 										around here where you
 										are mentioned. You can change or remove it at any time.</small>
 								</div>
-								<button type="button" class="btn btn-primary rounded-pill" style="background: rgb(25,28,147);">Create Project</button>
+								<button type="button" class="btn btn-primary rounded-pill" style="background: rgb(25,28,147);">Update Project Info</button>
 								<button type="reset" class="btn btn-light rounded-pill">Reset Changes</button>
 							</form>
 						</div>
@@ -169,13 +169,36 @@
 										back. Please be
 										certain.</p>
 								</div>
-								<button class="btn btn-danger rounded-pill" type="button">Delete Project</button>
+								<a class="btn btn-danger rounded-pill" data-toggle="modal" data-target="#feedback" role="button" href="#feedback">Delete Project</a>
 							</form>
 						</div>
 					</div>
 				</div>
 
 			</div>
+			<div class="modal fade" id="feedback" tabindex="-1" role="dialog" aria-labelledby="feedack_CenterTitle" aria-hidden="true">
+				<div class="modal-dialog modal-dialog-centered" role="document">
+				  <div class="modal-content">
+					<div class="modal-header">
+					  <h5 class="modal-title" id="setup_feedback">Are you absolutely sure?</h5>
+					  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					  </button>
+					</div>
+					<div class="modal-body">
+						This will permanently delete your project
+						<p> Please type your project name to confirm.</p>
+					</div>
+					<div style="margin: 10px;">
+						<input type="text" class="form-control" id="orgName" placeholder="Project Name" value="">
+					</div>
+					<div class="modal-footer">
+					  <a href="project.html"><button type="button" class="btn btn-danger rounded-pill" >Confirm Delete</button></a>
+					</div>
+				  </div>
+				</div>
+			  </div>
+
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
