linked login button

--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
                     <form style="border-radius: 2;color: rgb(33, 37, 41);border: 2px solid rgb(66,113,234) ;border-top-width: 2px;">
                         <div class="form-group text-left"><label class="text-left" for="name" style="text-align: left;">Organisation Name</label><input class="form-control item" type="text" id="name" style="border: 2px solid rgb(160,155,241) ;"></div>
                         <div class="form-group text-left"><label for="email">Email</label><input class="form-control item" type="email" id="email" style="border: 2px solid rgb(160,155,241) ;"></div>
-                        <div class="form-group text-left"><label for="email">Password</label><input class="form-control" type="password" style="border: 2px solid rgb(160,155,241) ;"></div><button class="btn btn-primary btn-block border rounded-pill" type="submit" style="background: rgb(25,28,147);">Login</button>
+                        <a class="btn btn-primary btn-block border rounded-pill" role="button" href="home.html" style="background: rgb(25,28,147);">Login</a>
                         <div style="margin: 10px; text-align: center;">
                             <p style="font-size: 13px; opacity: 100%;">Don't have an account?&nbsp;<a class="text-left forgot" style="text-align: left;" href="registration.html">REGISTER</a></p>
                         </div>
