Initial commit: page restyling.

--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
 	<section class="container">
 		<a class="home_green_button" data-toggle="modal" data-target="#feedback" role="button" href="#feedback">Create Project</a>
 		<div class="pt-3">
-			<input type="text" placeholder="Type here to search for projects" class="input-sm form-control" id="searchInput" onkeyup="myFunction()">
+			<input style="border-radius: 25px;" type="text" placeholder="Type here to search for projects" class="input-sm form-control" id="searchInput" onkeyup="home_search()">
 		</div>
 	</section>
 	
