--- a/iem.html
+++ b/iem.html
@@ -58,6 +58,7 @@
                     <div>
                         <p class="quad-heading">High Impact/High Effort</p>
                     </div>
+                    <button id="expand_button" class="bi bi-arrows-expand" onclick="expandQuadrant()"></button>
                 </div>
                 <div id="quad3" class="quadrant-3 quadrant" ondrop="drop(event)" ondragover="allowDrop(event)">
                     <div>
@@ -131,5 +132,6 @@
   <!--IEM scripts-->
   <script src="assets/js/add_feature.js"></script>
   <script src="assets/js/drag_and_drop.js"></script>
+  <script src="assets/js/expand_quadrants.js"></script>
 </body>
 </html>
