--- a/verification.html
+++ b/verification.html
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="form-row">
-                    <a class="green_button" role="button" href="home.html">Login</a>
+                    <a class="green_button" role="button" href="addEmployees.html">Verify</a>
                 </div>
             </form> 
             <div class="form_question">
