--- a/employees.html
+++ b/employees.html
@@ -50,7 +50,7 @@
 	<section class="container">
 		<a class="home_green_button" data-toggle="modal" data-target="#feedback" role="button" href="#feedback">Add employee</a>
 		<div class="pt-3">
-			<input type="text" placeholder="Type here to search for employees" class="input-sm form-control" id="searchInput" onkeyup="myFunction()">
+			<input type="text" placeholder="Type here to search for employees" class="input-sm form-control" id="searchInput" onkeyup="home_search()">
 		</div>
 	</section>
 	
