Resolved home.html conflicts

--- a/userProfile.html
+++ b/userProfile.html
@@ -15,22 +15,22 @@
 
 <body>
   <header>
-		<nav class="navbar navbar-light navbar-expand-lg  clean-navbar" style="background: rgb(25,28,147);">
-			<div class="container"><a class="navbar-brand logo" href="#" style="color: rgb(255,255,255);">Impact Effort
-					Matrix</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span
-						class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-				<div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(243,246,249);">
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item"><a class="nav-link" href="home.html" style="color: rgb(239,239,239);">Home</a></li>
-			
-						<li class="nav-item"><a class="nav-link" href="index.html" style="color: rgb(239,239,239);">Logout</a></li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-	</header>
-<br>
-<br>
+    <nav class="navbar navbar-light navbar-expand-lg  clean-navbar" style="background: rgb(25,28,147);">
+      <div class="container"><a class="navbar-brand logo" href="#" style="color: rgb(255,255,255);">Impact Effort
+          Matrix</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span
+            class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(243,246,249);">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link" href="home.html" style="color: rgb(239,239,239);">Home</a></li>
+
+            <li class="nav-item"><a class="nav-link" href="index.html" style="color: rgb(239,239,239);">Logout</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <br>
+  <br>
   <div class="container">
 
     <!-- Breadcrumb -->
@@ -107,14 +107,15 @@
               <h6>ACCOUNT SETTINGS</h6>
               <hr>
               <form>
-                
+
                 <div class="form-group">
                   <label class="d-block text-danger">Delete Account</label>
                   <p class="text-muted font-size-sm">Once you delete your account, there is no
-                      going back. Please be
-                      certain.</p>
-              </div>
-      <a class="btn btn-danger rounded-pill" data-toggle="modal" data-target="#feedback" role="button" href="#feedback">Delete Account</a>
+                    going back. Please be
+                    certain.</p>
+                </div>
+                <a class="btn btn-danger rounded-pill" data-toggle="modal" data-target="#feedback" role="button"
+                  href="#feedback">Delete Account</a>
               </form>
             </div>
             <div class="tab-pane" id="security">
@@ -137,7 +138,8 @@
 
       </div>
 
-      <div class="modal fade" id="feedback" tabindex="-1" role="dialog" aria-labelledby="feedack_CenterTitle" aria-hidden="true">
+      <div class="modal fade" id="feedback" tabindex="-1" role="dialog" aria-labelledby="feedack_CenterTitle"
+        aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -147,14 +149,15 @@
               </button>
             </div>
             <div class="modal-body">
-                This will permanently delete your account
-                <p> Please type your username to confirm.</p>
+              This will permanently delete your account
+              <p> Please type your username to confirm.</p>
             </div>
             <div style="margin: 10px;">
-                <input type="text" class="form-control" id="orgName" placeholder="username" value="">
+              <input type="text" class="form-control" id="orgName" placeholder="username" value="">
             </div>
             <div class="modal-footer">
-              <a href="userProfile.html"><button type="button" class="btn btn-danger rounded-pill" >Confirm Delete</button></a>
+              <a href="userProfile.html"><button type="button" class="btn btn-danger rounded-pill">Confirm
+                  Delete</button></a>
             </div>
           </div>
         </div>
