--- a/home.html
+++ b/home.html
@@ -13,6 +13,9 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
 	<link rel="stylesheet" href="assets/css/smoothproducts.css">
 	<script src="assets/js/home_search.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-firestore.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-analytics.js"></script>
 </head>
 
 <body>
@@ -42,8 +45,9 @@
 			<section class="panel">
 				<header class="panel-heading">
 					<span class="pull-right">
-						<a class="btn btn-success btn-md rounded-pill" data-toggle="modal" data-target="#createProject"
-							role="button" href="#createProject" style="background: rgb(26, 204, 141);">Create Project</a>
+						<a id="createproject" class="btn btn-success btn-md rounded-pill" data-toggle="modal"
+							data-target="#feedback" role="button" href="#feedback" style="background: rgb(26, 204, 141);">Create
+							Project</a>
 					</span>
 				</header>
 				<br />
@@ -52,8 +56,8 @@
 
 						<div class="col-md-12">
 							<div class="input-group">
-								<input type="text" placeholder="Search Here" class="input-sm form-control"
-									id="searchInput" onkeyup="myFunction()"> <span class="input-group-btn">
+								<input type="text" placeholder="Search Here" class="input-sm form-control" id="searchInput"
+									onkeyup="myFunction()"> <span class="input-group-btn">
 									<a href="#" class="btn btn-success btn-xs" style="background: rgb(26, 204, 141);"><i
 											class="bi bi-search"></i></a>
 								</span>
@@ -63,7 +67,7 @@
 				</div>
 				<br />
 				<br />
-				<table class="table table-hover p-table" id="listOfProjects">
+				<table class="table table-hover p-table">
 					<thead>
 						<tr class="header">
 							<th>Project Name</th>
@@ -149,32 +153,58 @@
 			</section>
 
 	</main>
-	<div class="modal fade" id="createProject" tabindex="-1" role="dialog" aria-labelledby="createProject_CenterTitle"
+	<div class="modal fade" id="feedback" tabindex="-1" role="dialog" aria-labelledby="feedack_CenterTitle"
 		aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title" id="createProject">Create New Project</h5>
+					<h5 class="modal-title" id="setup_feedback">Create New Project</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
-				<div class="modal-body">
+
+
+				<div class="modal-body" id="add-project-form">
 					<div style="margin: 10px;">
-						<input type="text" class="form-control" id="orgName" placeholder="Project Name" value="">
+						<input type="text" class="form-control" id="orgName" name="name" placeholder="Project Name" value="">
 					</div>
 					<div style="margin: 10px;">
-						<textarea type="text" class="form-control" id="orgDes" placeholder="Project Description"
+						<textarea type="text" class="form-control" id="orgDes" name="description" placeholder="Project Description"
 							value=""></textarea>
 					</div>
 				</div>
 				<div class="modal-footer">
-					<a href="iem.html"><button type="button" class="btn btn-primary rounded-pill"
-							style="background: rgb(25,28,147);">Create Project</button></a>
+					<input type="submit" value="Create Project" class="btn btn-primary rounded-pill"
+						style="background: rgb(25,28,147);">
 				</div>
 			</div>
 		</div>
 	</div>
+
+	<!-- The core Firebase JS SDK is always required and must be listed first -->
+
+
+	<script>
+		// Your web app's Firebase configuration
+		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+		var firebaseConfig = {
+			apiKey: "AIzaSyCbdZsFLEMU3gZe3bl3wZNdBPJUhj3n9Xs",
+			authDomain: "impact-effort-matrix.firebaseapp.com",
+			projectId: "impact-effort-matrix",
+			storageBucket: "impact-effort-matrix.appspot.com",
+			messagingSenderId: "553606138120",
+			appId: "1:553606138120:web:3e92e0eaa3482f699444bd",
+			measurementId: "G-997KWTPYR2"
+		};
+		// Initialize Firebase
+		firebase.initializeApp(firebaseConfig);
+		firebase.analytics();
+		const db = firebase.firestore();
+		db.settings({ timestampInSnapshots: true });
+	</script>
+	<script src="home.js"></script>
 
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
