Fixed user profile and update profile

--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
 				<ul>
 				<li><a class="nav-link scrollto active" href="index.html">Home</a></li>
 				<li><a class="nav-link scrollto" href="employees.html">Employees</a></li>
-				<li><a class="nav-link scrollto" href="userProfile.html">User Profile</a></li>
+				<li><a class="nav-link scrollto" href="viewUserProfile.html">View User Profile</a></li>
 				<li><a class="nav-link scrollto" href="orgProfile.html">Company Profile</a></li>
 				<li><a class="nav-link scrollto" href="index.html">Logout</a></li>
 				</ul>
