--- a/project.html
+++ b/project.html
@@ -24,6 +24,7 @@
 						<li class="nav-item"><a class="nav-link" href="home.html" style="color: rgb(239,239,239);">Home</a></li>
 						<li class="nav-item"><a class="nav-link" href="userProfile.html"
 								style="color: rgb(247,245,245);">Profile</a></li>
+						<li class="nav-item"><a class="nav-link" href="iem.html" style="color: rgb(239,239,239);">Project</a></li>
 						<li class="nav-item"><a class="nav-link" href="index.html" style="color: rgb(239,239,239);">Logout</a></li>
 					</ul>
 				</div>
